# DartsCounter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  build.gradle  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  gradlew.bat  settings.gradle
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  redis.py  security.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  admin_log.py  elo.py  elo_config.py  game.py  league.py  league_event.py  player.py  season.py  title.py  tournament.py  webhook.py
backend/app/routers/: __init__.py  admin.py  auth.py  elo.py  games.py  leagues.py  live.py  players.py  stats.py  tournaments.py  webhooks.py
backend/app/schemas/: admin.py  auth.py  elo.py  game.py  league.py  player.py  stats.py  webhook.py
backend/app/scripts/: delete_game.py  merge_players.py  migrate_json.py  recompute_elo.py  seed_default_passwords.py  set_admin.py
backend/app/services/: achievements.py  admin.py  anticheat.py  auth.py  elo.py  elo_config.py  elo_query.py  games.py  (+16 more)
backend/tests/: conftest.py  test_achievements.py  test_admin.py  test_anticheat.py  test_auth.py  test_elo.py  test_elo_router.py  test_games.py  test_league_events.py  test_league_roles.py  test_leagues.py  test_live.py  test_live_announce.py  test_merge_players.py  test_migrate_json.py  test_notifications.py  test_players.py  test_progression.py  test_stats.py  test_taverne.py  test_titles.py  test_tournaments.py  test_tribunal.py  test_webhooks.py
(+308 files in other folders)
